[package]
name = "bigfloppa"
version = "0.3.0"
authors = ["Andrew Kubera"]
description = "Arbitrary precision decimal numbers"
documentation = "https://docs.rs/bigdecimal"
homepage = "https://github.com/akubera/bigdecimal-rs"
repository = "https://github.com/akubera/bigdecimal-rs"
keywords = ["mathematics", "numerics", "decimal", "arbitrary-precision", "floating-point"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
serde = { version = "1.0", optional = true }

bigdecimal = { version = "0.3.0",optional = true }
bytes = { version = "1.4.0", optional = true }
sqlx-core = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "bigdecimal"], optional = true }

[dev-dependencies.serde_json]
version = "1.0"

[features]
sqlx = ["sqlx-core", "bytes"]
string-only = []
