[package]
name = "bigfloppa"
version = "0.3.5"
authors = ["Andrew Kubera"]
description = "Arbitrary precision decimal numbers"
documentation = "https://docs.rs/bigfloppa"
homepage = "https://github.com/akubera/bigdecimal-rs"
repository = "https://github.com/akubera/bigdecimal-rs"
keywords = ["mathematics", "numerics", "decimal", "arbitrary-precision", "floating-point"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
serde = { version = "1.0", optional = true }

bigdecimal = { version = "0.3.0", optional = true }
bytes = { version = "1.4.0", optional = true }
sqlx-core = { version = "0.6.2", features = ["postgres", "bigdecimal"], optional = true }
schemars = { version = "0.8.11", optional = true }
serde_json = { version = "1.0.93", optional = true }

[dev-dependencies]
criterion = "0.4.0"
serde_json = "1.0.93"
bigdecimal = "0.3.0"

[features]
sqlx_integration = ["sqlx-core", "bytes", "bigdecimal"]
string-only = []
schema = ["schemars", "serde_json"]

[[bench]]
name = "basic"
harness = false
